# latex-music-linker

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/prompts/: plan-agentIntegration.prompt.md
docs/: latex_music_linking_spec.md  music_link_tools_schema.md
docs/prompts/: agent_prompt.md
docs/tools/: music_resolvers.yaml
examples/: newsletter_example.tex  newsletter_example_linked.tex
scripts/: run_on_dir.sh
src/latex_music_linker/: __init__.py  agent.py  cli.py  core.py  parsing.py  resolvers.py
tests/: conftest.py  test_agent_integration.py  test_parsing.py  test_resolvers.py  test_rewrite.py
tests/data/: sample.tex  sample_linked_expected.tex
