[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latex-music-linker"
version = "0.1.0"
description = "Automatically link music references in LaTeX newsletters."
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.optional-dependencies]
dev = [
    "pytest>=8",  # testing
    "ruff>=0.6",  # formatting and linting
]

[project.scripts]
latex-music-linker = "latex_music_linker.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"  # keep Ruff fixes aligned with the minimum supported Python version

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
