[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latex-music-linker"
version = "0.1.0"
description = "Automatically link music references in LaTeX newsletters."
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests"
]

[project.scripts]
latex-music-linker = "latex_music_linker.cli:main"

[project.entry-points."latex_music_linker.agents"]
heuristic = "latex_music_linker.agent:HeuristicStrategy"
llm = "latex_music_linker.agent:LLMStrategy"
claude-code = "latex_music_linker.agent:ClaudeCodeStrategy"

[tool.ruff]
line-length = 100
target-version = "py39"  # keep Ruff fixes aligned with the minimum supported Python version

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.6",
]
